@startuml

class Library {
    - name: String
    - address: String
    + addBook(book: Book)
    + removeBook(book: Book)
    + registerMember(member: Member)
}

class Book {
    - ISBN: String
    - title: String
    - author: String
    - status: String
    + checkAvailability(): boolean
}

class Member {
    - memberId: int
    - name: String
    - email: String
    + borrowBook(book: Book)
    + returnBook(book: Book)
}

class Librarian {
    - employeeId: int
    - name: String
    + issueBook(book: Book, member: Member)
    + receiveBook(book: Book, member: Member)
}

class Loan {
    - loanId: int
    - issueDate: Date
    - dueDate: Date
    - returnDate: Date
    + calculateFine(): double
}

class Author {
    - authorId: int
    - name: String
}

Library "1" *-- "0..*" Book
Library "1" *-- "0..*" Member
Library "1" *-- "1..*" Librarian

Book "0..*" -- "1..*" Author : written by
Member "1" -- "0..*" Loan : borrows
Book "1" -- "0..*" Loan : loaned in
Librarian "1" -- "0..*" Loan : manages

@enduml